--- a/app/boards/circuitdojo_feather_nrf9160_ns.conf
+++ b/app/boards/circuitdojo_feather_nrf9160_ns.conf
@@ -61,14 +61,17 @@ CONFIG_TFM_SECURE_UART_SHARE_INSTANCE=y
 # Crypto drivers
 CONFIG_NRF_SECURITY=y
 CONFIG_NORDIC_SECURITY_BACKEND=y
+# CONFIG_MBEDTLS_LEGACY_CRYPTO_C=y
+# CONFIG_CC3XX_BACKEND=y
+# CONFIG_PSA_CRYPTO_DRIVER_OBERON=n
 CONFIG_PSA_CRYPTO_DRIVER_CC3XX=y
 
 # MbedTLS configurations
 CONFIG_MBEDTLS=y
 CONFIG_MBEDTLS_ENABLE_HEAP=y
 CONFIG_MBEDTLS_HEAP_SIZE=32768
-CONFIG_MBEDTLS_SSL_IN_CONTENT_LEN=4096
-CONFIG_MBEDTLS_SSL_OUT_CONTENT_LEN=4096
+CONFIG_MBEDTLS_SSL_IN_CONTENT_LEN=2048
+CONFIG_MBEDTLS_SSL_OUT_CONTENT_LEN=2048
 
 # Create the mbed SSL/TLS library in addition to the mbed crypto library
 CONFIG_MBEDTLS_TLS_LIBRARY=y
@@ -78,35 +81,91 @@ CONFIG_MBEDTLS_X509_LIBRARY=y
 
 # Enable TLS credentials management subsystem
 CONFIG_TLS_CREDENTIALS=y
+# CONFIG_TLS_CREDENTIALS_BACKEND_PROTECTED_STORAGE=y
+CONFIG_NET_SOCKETS_TLS_MAX_CONTEXTS=6
+CONFIG_NET_SOCKETS_TLS_MAX_CIPHERSUITES=10
+CONFIG_NET_SOCKETS_TLS_SET_MAX_FRAGMENT_LENGTH=n
 
 # PSA options
 CONFIG_MBEDTLS_PSA_CRYPTO_C=y
 CONFIG_MBEDTLS_RSA_C=y
+# CONFIG_MBEDTLS_ECJPAKE_C=n
+
+# Key exchange configurations
+CONFIG_MBEDTLS_KEY_EXCHANGE_RSA_ENABLED=y
+CONFIG_MBEDTLS_KEY_EXCHANGE_ECDH_RSA_ENABLED=y
+CONFIG_MBEDTLS_KEY_EXCHANGE_ECDH_ECDSA_ENABLED=y
+CONFIG_MBEDTLS_KEY_EXCHANGE_ECDHE_RSA_ENABLED=y
+CONFIG_MBEDTLS_KEY_EXCHANGE_ECDHE_ECDSA_ENABLED=y
+
+CONFIG_MBEDTLS_KEY_EXCHANGE_RSA_PSK_ENABLED=n
+CONFIG_MBEDTLS_KEY_EXCHANGE_DHE_RSA_ENABLED=n
+CONFIG_MBEDTLS_KEY_EXCHANGE_DHE_PSK_ENABLED=n
+CONFIG_MBEDTLS_KEY_EXCHANGE_ECDHE_PSK_ENABLED=n
+CONFIG_MBEDTLS_KEY_EXCHANGE_ECJPAKE_ENABLED=n
 
 # Key type configurations
 CONFIG_PSA_WANT_KEY_TYPE_AES=y
 CONFIG_PSA_WANT_KEY_TYPE_ECC_PUBLIC_KEY=y
+CONFIG_PSA_WANT_KEY_TYPE_ECC_KEY_PAIR_IMPORT=y
+CONFIG_PSA_WANT_KEY_TYPE_ECC_KEY_PAIR_EXPORT=y
+
 CONFIG_PSA_WANT_KEY_TYPE_RSA_PUBLIC_KEY=y
+CONFIG_PSA_WANT_KEY_TYPE_RSA_KEY_PAIR_IMPORT=y
+CONFIG_PSA_WANT_KEY_TYPE_RSA_KEY_PAIR_EXPORT=y
 
 # Select RSA key sizes
-CONFIG_PSA_WANT_RSA_KEY_SIZE_1024=y
+# CONFIG_PSA_WANT_RSA_KEY_SIZE_1024=y
 CONFIG_PSA_WANT_RSA_KEY_SIZE_2048=y
-CONFIG_PSA_WANT_RSA_KEY_SIZE_4096=y
+# CONFIG_PSA_WANT_RSA_KEY_SIZE_4096=y
 
-# PSA algorithms
-CONFIG_PSA_WANT_ALG_GCM=y
+# Cipher configurations
+CONFIG_PSA_WANT_ALG_CTR=y
+CONFIG_PSA_WANT_ALG_STREAM_CIPHER=y
+
+# Key agreement configurations
 CONFIG_PSA_WANT_ALG_ECDH=y
+
+# Key derivation function configurations
+# CONFIG_PSA_WANT_ALG_HKDF=n
+CONFIG_PSA_WANT_ALG_TLS12_PRF=y
+# CONFIG_PSA_WANT_ALG_TLS12_ECJPAKE_TO_PMS=n
+
+# MAC configurations
+# CONFIG_PSA_WANT_ALG_CMAC=n
+# CONFIG_PSA_WANT_ALG_HMAC=n
+
+# AEAD configurations
+# CONFIG_PSA_WANT_ALG_CCM=n
+CONFIG_PSA_WANT_ALG_GCM=y
+# CONFIG_PSA_WANT_ALG_CHACHA20_POLY1305=n
+
+# Asymmetric signature configurations
 CONFIG_PSA_WANT_ALG_ECDSA=y
-CONFIG_PSA_WANT_ECC_MONTGOMERY_255=y
-CONFIG_PSA_WANT_ALG_RSA_PKCS1V15_CRYPT=y
+# CONFIG_PSA_WANT_ALG_DETERMINISTIC_ECDSA=n
 CONFIG_PSA_WANT_ALG_RSA_PKCS1V15_SIGN=y
+CONFIG_PSA_WANT_ALG_RSA_PSS=y
+
+# Asymmetric encryption configurations
+CONFIG_PSA_WANT_ALG_RSA_OAEP=y
+CONFIG_PSA_WANT_ALG_RSA_PKCS1V15_CRYPT=y
+
+# ECC curve configurations
+CONFIG_PSA_WANT_ECC_MONTGOMERY_255=y
+CONFIG_PSA_WANT_ECC_SECP_R1_256=y
+
+# RNG configurations
+CONFIG_PSA_WANT_ALG_CTR_DRBG=y
 
 # Increase MPI size to 512 for 4096B certificates
-CONFIG_MBEDTLS_MPI_MAX_SIZE=512
+# CONFIG_MBEDTLS_MPI_MAX_SIZE=512
 
 # Enable SNI
 CONFIG_MBEDTLS_X509_CRT_PARSE_C=y
 CONFIG_MBEDTLS_SSL_SERVER_NAME_INDICATION=y
+
+# Enable SSL renegotiation
+CONFIG_MBEDTLS_SSL_RENEGOTIATION=y
 
 # Enable SSL cache
 CONFIG_MBEDTLS_SSL_CACHE_C=y
